--- a/10_Platform_Widget/praktikum/flutter_mochammadagatha/pubspec.yaml
+++ b/10_Platform_Widget/praktikum/flutter_mochammadagatha/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
+  flutter_launcher_icons: ^0.13.1
+  fluttericon: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - assets/fonts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,6 +79,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  #     - family:  MyFlutterApp
+  #     fonts:
+  #       - asset: assets/fonts/MyFlutterApp.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
